--- a/style.css
+++ b/style.css
@@ -5,32 +5,34 @@ body {
   background-color: black;
   opacity: 0.9;
   flex-wrap: center;
-  margin:0;
+
 }
+
 a {
-  color:white;
-  margin:0;
-  padding:0;
+  color: white;
+  margin: 0;
+  padding: 0;
   justify-content: space-between;
 }
 
 header {
-  width: 1000px;
+  position: fixed;
+  width: 1250px;
   display: flex;
-  border-bottom: 1px solid seashell;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 10px 10px 9px 10px;
-  border: 3px solid Pink;
-  text-decoration: underline;
+  background-color: black;
+  border-bottom: 1px solid seashell;
+  z-index: 2;
+
 }
 
 .header {
-  width: 1000px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 10px 9px 10px;
+  text-align:center;
 }
 
 .header-nav {
@@ -50,12 +52,13 @@ img {
   margin: 0;
   padding: 23;
   height: 69px;
+  padding-top:39px;
+  padding-right:20px;
 }
 
 .mission {
-  width: 1000px;
+  width: 1200px;
   height: 476px;
-  border: 3px solid Pink;
   margin-right: 20px;
   margin-left: 20px;
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
@@ -64,7 +67,7 @@ img {
   opacity: 0.9;
   background-color: black;
   background-repeat: no-repeat;
-   z-index:1;
+  z-index: 1;
 }
 
 .mission-text h2 {
@@ -75,8 +78,9 @@ img {
   flex-wrap: wrap;
   height: 100px;
   opacity: 0.9;
-  z-index:1;
+  z-index: 1;
 }
+
 .mission-text h4 {
   display: flex;
   align-items: center;
@@ -85,15 +89,13 @@ img {
   flex-wrap: wrap;
   height: 100px;
   opacity: 0.9;
-   z-index:1
+  z-index: 1
 }
-
 
 .tea {
   display: flex;
   width: 1000px;
   height: 700px;
-  border: 3px solid Pink;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
@@ -110,7 +112,6 @@ img {
   width: 300px;
   background-color: black;
   display: flex;
-  border: 3px solid Pink;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
@@ -119,7 +120,6 @@ img {
 .box img {
   height: 200px;
   width: 300px;
-  border: 3px solid Pink;
 }
 
 .box,
@@ -133,7 +133,8 @@ h4 {
   height: 8px;
 }
 
-.box, h2 {
+.box,
+h2 {
   display: flex;
   align-items: center;
   color: white;
@@ -149,21 +150,24 @@ h4 {
 
 .tea,
 h2 {
-  border: 3px solid Pink;
+  margin: 0;
+}
+
+.tea{
   margin: 0;
 }
 /* Featured Tea Styling */
 
 .monthly-tea {
   margin-top: 50px;
-  width: 1000px ;
+  width: 1200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .teas {
-  width: 1000px;
+  width: 1200px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -179,4 +183,80 @@ h2 {
 .tea-photo {
   width: 300px;
   height: 200px;
+}
+
+/*LOCATION STUFF*/
+
+.location {
+  margin-top: 50px;
+  height: 500px;
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
+  background-position: center;
+}
+
+.location h2 {
+  background-color: transparent;
+  display: flex;
+}
+
+.locations-box {
+  width: 980px;
+  display: flex;
+  justify-content: space around;
+  width: 300px;
+  margin-top: 5px;
+  border: 3px solid Pink;
+}
+
+.location-text {
+  width: 300px;
+  height: 250px;
+  background-color: black;
+  display: inline-block;
+  margin: 20px;
+  margin: 0;
+  justify-content: space around;
+  width: 300px;
+}
+
+.location-text h3 {
+  display: flex;
+  align-items: center;
+  color: white;
+  background-color: black;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.location-text p {
+  display: flex;
+  align-items: center;
+  color: white;
+  background-color: black;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+/* Contact Styling */
+
+.contact {
+  height: 200px;
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding-top:10px;
+}
+
+/* Copywrite Styling */
+
+.copyright {
+  text-align: left;
+  padding-left: 20px;
 }
