--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
   background-color: black;
   opacity: 0.9;
   flex-wrap: center;
-
+  margin: 0;
+  width:100%;
 }
 
 a {
@@ -17,7 +18,7 @@ a {
 
 header {
   position: fixed;
-  width: 1250px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,10 +58,9 @@ img {
 }
 
 .mission {
-  width: 1200px;
+  width: 100%;
   height: 476px;
-  margin-right: 20px;
-  margin-left: 20px;
+  margin: 0 auto;
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
   padding-top: 325px;
   align-items: center;
@@ -68,6 +68,7 @@ img {
   background-color: black;
   background-repeat: no-repeat;
   z-index: 1;
+  background-size: cover;
 }
 
 .mission-text h2 {
@@ -94,11 +95,12 @@ img {
 
 .tea {
   display: flex;
-  width: 1000px;
+  margin: 0 auto;
   height: 700px;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
+  width:100%;
 }
 
 .container {
@@ -159,8 +161,8 @@ h2 {
 /* Featured Tea Styling */
 
 .monthly-tea {
-  margin-top: 50px;
-  width: 1200px;
+  margin-top: 0;
+  width: 1100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -190,7 +192,7 @@ h2 {
 .location {
   margin-top: 50px;
   height: 500px;
-  width: 1200px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -246,7 +248,7 @@ h2 {
 
 .contact {
   height: 200px;
-  width: 1200px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
