--- a/style.css
+++ b/style.css
@@ -158,21 +158,20 @@ h2 {
 .tea{
   margin: 0;
 }
-/* Featured Tea Styling */
+/* Featured Tea Stuff */
 
 .monthly-tea {
-  margin-top: 0;
-  width: 1100px;
+  margin-top: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .teas {
-  width: 1200px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  width: 1200px;
 }
 
 .teas .teapics {
@@ -199,6 +198,8 @@ h2 {
   align-items: center;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .location h2 {
