--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
   width:100%;
 }
 
+/* HEADER */
+
 a {
   color: white;
   margin: 0;
@@ -158,7 +160,7 @@ h2 {
 .tea{
   margin: 0;
 }
-/* Featured Tea Stuff */
+/* FEATURED TEA SECTION */
 
 .monthly-tea {
   margin-top: 0 auto;
@@ -172,6 +174,7 @@ h2 {
   justify-content: center;
   flex-wrap: wrap;
   width: 1200px;
+  margin: 0 auto
 }
 
 .teas .teapics {
@@ -186,7 +189,7 @@ h2 {
   height: 200px;
 }
 
-/*LOCATION STUFF*/
+/*LOCATION SECTION*/
 
 .location {
   margin-top: 50px;
@@ -199,7 +202,6 @@ h2 {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .location h2 {
@@ -245,7 +247,7 @@ h2 {
   flex-wrap: wrap;
 }
 
-/* Contact Styling */
+/* CONTACT SECTION */
 
 .contact {
   height: 200px;
